--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>🏆Tiki-Taka</title>
+    <title>Tiki-Taka</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/imgs/favicon.ico">
+    
 </head>
 <body>
     <div id="app"></div>
